QA: moved suite.sh and relatives in 'scripts' directory
Ref #29

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ cache:
 script:
   - ag --version
   - vim --version
-  - (cd t && ./suite.sh --verbose --clean)
+  - (cd scripts && ./suite.sh --verbose --clean)
 
 notifications:
   email:
