--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: generic
+
 sudo: false
 
 env:
@@ -43,3 +44,9 @@ script:
 notifications:
   email:
     -  albertofanjul@gmail.com
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/5413140439cc10447c97
+    on_success: change
+    on_failure: always
+    on_start: never
