--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,87 @@
 language: generic
 
-sudo: false
+matrix:
+  include:
 
-env:
-  - AG_VER=master
-  - AG_VER=0.31.0
-  - AG_VER=0.25.0
-  - AG_VER=0.23.0
+   - &vim74 
+     env: AG_VER=master
+   
+     sudo: false
+   
+     addons: 
+       apt:
+         packages:
+         - vim
+         - automake
+         - pkg-config
+         - libpcre3-dev
+         - zlib1g-dev
+         - liblzma-dev
+     
+     before_install:
+       - URL=https://github.com/ggreer/the_silver_searcher/archive
+       - DIR=$HOME/ag/the_silver_searcher-$AG_VER
+       - export PATH="$DIR:$PATH"
+       - if [[ ! -d $DIR ]]; then
+         (cd ~ && wget $URL/$AG_VER.zip && unzip -d ag $AG_VER.zip); fi
+       - if [[ ! -f $DIR/ag ]]; then
+         (cd $DIR && ./build.sh) || (rm -rf $DIR); fi
+       - ver=$(ag --version | awk '{gsub("\\.","");printf("%d\n",$NF);exit}')
+       - if (($ver >= 280)) && [[ ! -f $DIR/ag- ]]; then
+         mv -v $DIR/ag{,-};
+         printf '#!/bin/sh\nag- --noaffinity "$@"' > $DIR/ag;
+         chmod +x $DIR/ag; fi
+     
+     cache:
+       directories:
+       - $HOME/ag
+     
+     script:
+       - ag --version
+       - vim --version
+       - (cd scripts && ./suite.sh --verbose --clean)
+   
+   - << : *vim74
+     env: AG_VER=0.31.0
 
-addons:
-  apt:
-    packages:
-    - vim
-    - automake
-    - pkg-config
-    - libpcre3-dev
-    - zlib1g-dev
-    - liblzma-dev
+   - << : *vim74
+     env: AG_VER=0.25.0
 
-before_install:
-  - URL=https://github.com/ggreer/the_silver_searcher/archive
-  - DIR=$HOME/ag/the_silver_searcher-$AG_VER
-  - export PATH="$DIR:$PATH"
-  - if [[ ! -d $DIR ]]; then
-    (cd ~ && wget $URL/$AG_VER.zip && unzip -d ag $AG_VER.zip); fi
-  - if [[ ! -f $DIR/ag ]]; then
-    (cd $DIR && ./build.sh) || (rm -rf $DIR); fi
-  - ver=$(ag --version | awk '{gsub("\\.","");printf("%d\n",$NF);exit}')
-  - if (($ver >= 280)) && [[ ! -f $DIR/ag- ]]; then
-    mv -v $DIR/ag{,-};
-    printf '#!/bin/sh\nag- --noaffinity "$@"' > $DIR/ag;
-    chmod +x $DIR/ag; fi
+   - << : *vim74
+     env: AG_VER=0.23.0
 
-cache:
-  directories:
-  - $HOME/ag
+   - &nvim env: EDITOR=nvim
+   
+     sudo: required
 
-script:
-  - ag --version
-  - vim --version
-  - (cd scripts && ./suite.sh --verbose --clean)
+     dist: trusty
+     
+     before_script:
+       - sudo apt-add-repository ppa:neovim-ppa/unstable -y
+       - sudo apt-get update -qq
+       - sudo apt-get install neovim
+       - sudo apt-get install silversearcher-ag
+     
+     script:
+       - vim --version
+       - cd scripts
+       - ./suite.sh --verbose --clean
+   
+   - &vim73 env:
+       
+     sudo: required
+     
+     before_script:
+       - sudo apt-get install vim
+       - sudo apt-add-repository ppa:fcwu-tw/ppa -y
+       - sudo apt-get update -qq
+       - sudo apt-get install silversearcher-ag
+     
+     script:
+       - vim --version
+       - ag --version
+       - cd scripts
+       - ./suite.sh --verbose --clean
 
 notifications:
   email:
